# bmstu-iu7-aa

lab1/: CMakeLists.txt  main.cpp  tests.json
lab1/bench_results/: dl.csv  il.csv  rcl.csv
lab1/inc/: DamerauLevenshteinDistance.h  LevenshteinDistance.h
lab1/src/: DamerauLevenshteinDistance.cpp  LevenshteinDistance.cpp
lab1_tex/: 00-title.tex  12-intro.tex  20-analysis.tex  30-design.tex  40-impl.tex  50-research.tex  80-conclusion.tex  rpz.bib
lab1_tex/bench_results/: dl.csv  dl2.csv  il.csv  il2.csv  rcl.csv  rcl2.csv  rl.csv  rl2.csv
lab1_tex/code/: dl.cpp  il.cpp  rcl.cpp  rl.cpp
lab2/inc/: sorts.h
lab2/tests/: test_main.cpp  tests.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/bench_results/: bubble_resorted.csv  insert_resorted.csv  select_resorted.csv  select_sorted.csv
lab3/inc/: sorts.h
lab3/tests/: tests.cpp
lab3_tex/: .gitignore  00-title.tex  12-intro.tex  20-analysis.tex  30-design.tex  40-impl.tex  50-research.tex  80-conclusion.tex  build.sh  rpz.bib
lab3_tex/bench_results/: bubble_random copy.csv  bubble_random.csv  bubble_resorted copy.csv  bubble_sorted copy.csv  bubble_sorted.csv  insert_random copy.csv  insert_random.csv  insert_resorted copy.csv  insert_sorted copy.csv  (+5 more)
lab4/: maze-generator.py
lab5/: CMakeLists.txt  main.cpp
lab5_tex/: 00-title.tex  12-intro.tex  20-analysis.tex  30-design.tex  40-impl.tex  50-research.tex  80-conclusion.tex  rpz.tex
lab6_tex/: 00-title.tex  12-intro.tex  20-analysis.tex  30-design.tex  40-impl.tex  50-research.tex  80-conclusion.tex  81-biblio.tex  make_plantuml.sh  rpz.bib  rpz.tex
(+40 files in other folders)
